# discorHDD

./: Cargo.toml  README.md  \  mount.sh  run.sh
src/: bridge.rs  config.rs  discord_drive.rs  drive.rs  lib.rs  main.rs  nbdkit.rs  test_bridge.rs
tests/: test_bridge.rs  tests.rs
