[package]
name = "discorhdd"
version = "0.1.0"
edition = "2021"

[lib]
name = "discorhdd_nbdkit"
path = "src/nbdkit.rs"
crate-type = ["cdylib"]

[[bin]]
name = "discorhdd_thin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dirs = "5.0.1"
futures = "0.3.29"
futures-util = "0.3.29"
nbdkit = "0.3.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serenity = { version = "0.11.7", default-features = false, features = [
  "builder",
  "gateway",
  "tokio",
  "http",
  "rustls_backend",
  "client",
  "reqwest",
  "rustversion",
  "model",
] }
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
toml = "0.8.8"
